[package]
name = "apitube"
version = "1.0.0"
edition = "2021"
description = "APITUBE News API SDK for Rust"
license = "MIT"
repository = "https://github.com/apitube/apitube-rust-sdk"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic"
path = "example.rs"
